# lnch

./: .gitignore  Cargo.toml  LICENSE  README.ja.md  README.md  RELEASES.md  dist-workspace.toml
.github/workflows/: release.yml
docs/: 01-overview.md  02-architecture.md  03-config.md  04-process-management.md  05-tui.md  06-cli-and-error-handling.md  07-testing.md  08-roadmap.md  09-release.md  README.md
examples/: lnch.yaml  server.py  worker.py
examples/fullstack/: .gitignore  README.ja.md  README.md  lnch.yaml
examples/fullstack/backend/: main.py  pyproject.toml  tasks.py
examples/fullstack/frontend/: package.json
examples/fullstack/frontend/src/: App.jsx
examples/simple-windows/: lnch.yaml
src/: cli.rs  error.rs  lib.rs  main.rs  message.rs
src/config/: loader.rs  mod.rs  model.rs  validator.rs
src/log/: buffer.rs
src/process/: dependency.rs  manager.rs  mod.rs  pty.rs  ready.rs  signal.rs  task_runner.rs
src/tui/: app.rs  clipboard.rs  event.rs  mod.rs  search.rs  selection.rs  ui.rs
src/tui/widgets/: line_wrapper.rs  log_view.rs  mod.rs  status_bar.rs  task_list.rs
src/update/: checker.rs
tests/: config_test.rs  dependency_test.rs  process_lifecycle_test.rs  process_test.rs  ready_check_test.rs
tests/fixtures/: circular_dep.yaml  invalid.yaml  valid.yaml
