[package]
name = "lnch"
version = "0.1.8"
edition = "2021"
description = "A TUI multi-process launcher for your dev environment"
license = "MIT"
keywords = ["tui", "process-manager", "dev-tools", "launcher"]
categories = ["command-line-utilities", "development-tools"]
repository = "https://github.com/shell-term/lnch"
homepage = "https://github.com/shell-term/lnch"
readme = "README.md"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = { version = "0.29", features = ["event-stream"] }
futures = "0.3"
ratatui = { version = "0.30", features = ["unstable-rendered-line-info"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", features = ["signal", "process"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_Pipes",
    "Win32_Security",
] }
strip-ansi-escapes = "0.2"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
